Add regular expression Tokens